# supportsheep

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json  turbo.json
.claude/: CLAUDE.md  settings.json
.claude/rules/: api.md  database.md  frontend.md  git-safety.md  security.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-mentions.yml  claude.yml  deploy.yml
apps/desktop/: package.json  tsconfig.json
apps/desktop/src/: index.html  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  .gitignore  DESIGN.md  drizzle.config.ts  eslint.config.mjs  netlify.toml  next.config.ts  open-next.config.ts  package.json  playwright.config.ts  playwright.deploy-preview.config.ts  tsconfig.json  vitest.config.ts  wrangler.jsonc
apps/web/scripts/: backfill-public-seo.ts  dev-interview-harness.test.ts  dev-interview-harness.ts  generate-featured-images.ts  stream-parity-smoke.test.ts  stream-parity-smoke.ts
apps/web/src/: middleware.test.ts  middleware.ts
apps/web/tests/: agent-readiness.spec.ts  canvas-enter-key.spec.ts  free-tools-public.spec.ts  free-tools-settings.spec.ts  guest-post.spec.ts  health.spec.ts  (+18 more)
ops/domain-cron/: README.md  deploy.sh  worker.production.js  worker.staging.js  wrangler.production.jsonc  wrangler.staging.jsonc
(+1265 files in other folders)
